syntax = "proto3";

package position;

option go_package = "./position";

// 产品创建
message CreateRequest {
  int64 Cid   =1;
  string Title=2;
  string JobCategory=3;
  string JobTypeName=4;
  string JobDetail=5;
  string JobLocation=6;
}
message CreateResponse {
  int64 Id = 1;
}
// 产品创建

// 产品修改
message UpdateRequest {
  int64 Id  =1;
  string Title=2;
  string JobCategory=3;
  string JobTypeName=4;
  string JobDetail=5;
  string JobLocation=6;
}
message UpdateResponse {
}
// 产品修改

// 产品删除
message RemoveRequest {
  int64 Id = 1;
}
message RemoveResponse {
}

message RefreshRequest{
  int64 Cid    =1;
}

message RefreshResponse {
    int64 Id    =1;
    string Company   =2;
    int64 Number = 3;
    string Brief =4;
    string Picture =5;
}

service Position {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Remove(RemoveRequest) returns(RemoveResponse);
  rpc Refresh(RefreshRequest) returns(RefreshResponse);
}

